# Rainbow_six_kedro_ml

./: .dockerignore  .dvcignore  .gitignore  README.AIRFLOW.md  README.md  REPORTE_EXPERIMENTOS.md  docker-compose.airflow.yml  docker-compose.override.yml  docker-compose.yml  docker-ml.bat  dvc.yaml  requirements.txt
proyecto-ml/: .dvcignore  dvc.yaml  dvc.yml  pyproject.toml
proyecto-ml/.Trash-1000/info/: Untitled.ipynb.trashinfo
proyecto-ml/.viz/: kedro_pipeline_events.json  stats.json
proyecto-ml/conf/base/: catalog.yml  parameters.yml  parameters_model_comparison.yml  parameters_modelo_clasificacion.yml  parameters_modelo_regresion.yml  parameters_rainbow_six.yml
proyecto-ml/conf/local/: parameters.yml
proyecto-ml/dags/: _airflow_stubs.py  classification_pipeline_dag.py  config.py  consolidate_model_results.py  model_comparison_dag.py  modelo_clasificacion.py  modelo_regresion.py  rainbow_six.py  rainbow_six_daily_data_processing.py  rainbow_six_ml_pipeline.py  rainbow_six_on_demand.py  rainbow_six_weekly_model_training.py  regression_pipeline_dag.py  unsupervised_learning_dags.py
proyecto-ml/dags/operators/: __init__.py  kedro_operator.py
proyecto-ml/notebooks/: 01_business_understanding.ipynb  02_data_understanding.ipynb  03_data_preparation.ipynb  04_Modeling.ipynb  04_unsupervised_learning.ipynb  05_unsupervised_learning.ipynb  06_final_analysis.ipynb  ejemplo.ipynb
proyecto-ml/notebooks/Modelos Regresion/: modelo 1 regresion_linial_simple.ipynb  modelo 2 regresion multiple.ipynb  modelo 3 tree decicion regresion.ipynb  modelo 5 SVM.ipynb  (+2 more)
(+54 files in other folders)
